--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <div class="calcpad">
             <!-- Top row -->
             <div class="row">
-                <button value="C" class="clear">AC</button>
-                <button value="d" class="plusminus">&#x2213;</button>
+                <button value="A" class="allclear">AC</button>
+                <button value="C" class="clear">C</button>
                 <button value="%" class="percent">%</button>
                 <button value="/" class="operator">/</button>
             </div>
@@ -45,6 +45,7 @@
             </div>
             <!-- Bottom row -->
             <div class="row">
+                <button value="d" class="plusminus">&#x2213;</button>
                 <button value="0" class="zero">0</button>
                 <button value="." class="decimal">.</button>
                 <button value="=" class=" equals">=</button>
