--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
             <!-- Bottom row -->
             <div class="row">
-                <button value="d" class="plusminus">&#x2213;</button>
+                <button value="s" class="plusminus">&#x2213;</button>
                 <button value="0" class="zero">0</button>
                 <button value="." class="decimal">.</button>
                 <button value="=" class=" equals">=</button>
